Add pre-commit prettier, changeset action

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "astro": "1.0.0-beta.26",
     "astro-seo": "^0.5.0",
     "fast-glob": "^3.2.11",
+    "husky": "^8.0.1",
     "katex": "^0.15.3",
     "mdast-util-wiki-link": "^0.0.2",
     "micromark-extension-wiki-link": "^0.0.4",
+    "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-svelte": "^2.7.0",
     "rehype-autolink-headings": "^6.1.1",
