--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "mdast-util-wiki-link": "^0.0.2",
     "micromark-extension-wiki-link": "^0.0.4",
     "prettier": "^2.6.2",
-    "prettier-plugin-astro": "^0.0.12",
+    "prettier-plugin-astro": "^0.1.0-next.4",
     "prettier-plugin-svelte": "^2.7.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.2",
     "rehype-shift-heading": "^1.0.2",
     "rehype-slug": "^5.0.1",
+    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-wiki-link": "^1.0.4",
@@ -48,12 +49,14 @@
     "sass": "^1.51.0",
     "svelte": "^3.48.0",
     "vite-plugin-windicss": "^1.8.4",
-    "windicss": "^3.5.3"
+    "windicss": "^3.5.3",
+    "zx": "^6.1.0"
   },
   "peerDependencies": {
     "svelte": "^3.48.0"
   },
   "dependencies": {
+    "dayjs": "^1.11.2",
     "fuse.js": "^6.6.2",
     "throttle-debounce": "^5.0.0",
     "vis-data": "^7.1.4",
