Update dependencies; set up correct redirects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "module": "esnext",
-    "lib": ["ESNext"],
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["src/**/*"]
 }
