--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
     "release": "changeset publish"
   },
   "devDependencies": {
-    "@astrojs/svelte": "^0.1.3",
-    "@changesets/cli": "^2.22.0",
+    "@astrojs/svelte": "^0.1.4",
+    "@changesets/cli": "^2.23.0",
     "@fontsource/fira-sans": "^4.5.8",
-    "@types/throttle-debounce": "^4.0.0",
-    "astro": "1.0.0-beta.26",
+    "@types/throttle-debounce": "^5.0.0",
+    "astro": "1.0.0-beta.44",
     "astro-seo": "^0.5.0",
     "fast-glob": "^3.2.11",
     "husky": "^8.0.1",
-    "katex": "^0.15.3",
+    "katex": "^0.16.0",
     "mdast-util-wiki-link": "^0.0.2",
     "micromark-extension-wiki-link": "^0.0.4",
     "prettier": "^2.6.2",
-    "prettier-plugin-astro": "^0.1.0-next.4",
+    "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-svelte": "^2.7.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.2",
@@ -46,17 +46,17 @@
     "remark-math": "^5.1.1",
     "remark-wiki-link": "^1.0.4",
     "rollup-plugin-analyzer": "^4.0.0",
-    "sass": "^1.51.0",
+    "sass": "^1.52.3",
     "svelte": "^3.48.0",
     "vite-plugin-windicss": "^1.8.4",
-    "windicss": "^3.5.3",
-    "zx": "^6.1.0"
+    "windicss": "^3.5.4",
+    "zx": "^6.2.4"
   },
   "peerDependencies": {
     "svelte": "^3.48.0"
   },
   "dependencies": {
-    "dayjs": "^1.11.2",
+    "dayjs": "^1.11.3",
     "fuse.js": "^6.6.2",
     "throttle-debounce": "^5.0.0",
     "vis-data": "^7.1.4",
